[gd_scene load_steps=16 format=2]

[ext_resource path="res://asset/military/weapon/weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/military/uniform/heavy_armor.png" type="Texture" id=2]
[ext_resource path="res://asset/military/uniform/samurai_armor.png" type="Texture" id=3]
[ext_resource path="res://asset/military/troop/troop.gd" type="Script" id=4]
[ext_resource path="res://asset/military/troop/animation_troop_walking.tres" type="Animation" id=5]
[ext_resource path="res://asset/military/uniform/samurai_helm.png" type="Texture" id=6]
[ext_resource path="res://asset/military/uniform/leg.png" type="Texture" id=7]
[ext_resource path="res://asset/ui/bar/bar_empty.png" type="Texture" id=9]
[ext_resource path="res://asset/military/troop/animation_troop_dead.tres" type="Animation" id=10]
[ext_resource path="res://asset/ui/bar/bar.png" type="Texture" id=11]
[ext_resource path="res://asset/military/troop/animation_troop_dead_2.tres" type="Animation" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.85325
height = 10.3246

[sub_resource type="Animation" id=2]
resource_name = "troop_attacking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( -3.77977, -1.15749 ), Vector2( 3.70102, -1.03937 ), Vector2( 4.8297, -1.02625 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 5.58938 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/mount:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/weapon:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body/weapon:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body/leg_right:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.89623, 15.3513 ), Vector2( 9.83349, 13.9339 ), Vector2( 8.06172, 16.4931 ), Vector2( 7.33989, 16.1125 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/leg_left:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.6866, 17.7895 ), Vector2( -4.30888, 17.4745 ), Vector2( -5.93627, 17.737 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/leg_left:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 19.8676, 26.1387 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/leg_right:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -18.8812, -1.7213, -1.14753 ]
}

[sub_resource type="Animation" id=3]
resource_name = "troop_happy"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.3, 1.6, 2.3, 2.7, 3.2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -3.50283 ), Vector2( 1.8354, 0.293122 ), Vector2( 3.40662, -2.58165 ), Vector2( 2.11349, -3.90606 ), Vector2( 0, -3.50283 ), Vector2( 1.8354, 0.293122 ), Vector2( 3.40662, -2.58165 ), Vector2( 2.11349, -3.90606 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.8, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( -2.35969, -22.3597 ), Vector2( 0, -20 ), Vector2( -2.35969, -22.3597 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 1.8, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -24.216, 0.0, -24.216 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/mount:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/weapon:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1, 1.2, 1.5, 1.8, 2.2, 2.6, 2.9, 3.1, 3.4, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.0008, 16.8242, -38.9046, 16.8242, -25.587, 22.0008, 22.0008, 16.8242, -38.9046, 16.8242, -25.587, 22.0008 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body/weapon:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1, 1.2, 1.5, 1.8, 2.2, 2.6, 2.9, 3.1, 3.4, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.235962, -8.49487 ), Vector2( 6.55158, -27.0253 ), Vector2( 6.72348, -30.1826 ), Vector2( 6.55158, -27.0253 ), Vector2( -1.70732, -27.7332 ), Vector2( 0.235962, -8.49487 ), Vector2( 0.235962, -8.49487 ), Vector2( 6.55158, -27.0253 ), Vector2( 6.72348, -30.1826 ), Vector2( 6.55158, -27.0253 ), Vector2( -1.70732, -27.7332 ), Vector2( 0.235962, -8.49487 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body/leg_right:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.89623, 15.3513 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/leg_left:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.6866, 17.7895 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/leg_left:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/leg_right:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "troop_running"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0047, 8.71484, -7.10741, 10.8, -7.10741 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/mount:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/weapon:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("body/weapon:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body/leg_right:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.88619, 15.1954 ), Vector2( 11.8393, 14.8926 ), Vector2( 4.44245, 16.8661 ), Vector2( -5.8425, 17.829 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body/leg_left:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.947148, 16.7121 ), Vector2( -4.7826, 15.912 ), Vector2( 12.4068, 15.0154 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body/leg_left:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.73888, 26.8726, -19.3155 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("body/leg_right:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.993415, -26.0327, -0.495337, 26.823 ]
}

[node name="troop" type="KinematicBody2D"]
position = Vector2( -12.0136, -2.50282 )
script = ExtResource( 4 )

[node name="body" type="Sprite" parent="."]
self_modulate = Color( 0.988235, 0.0117647, 0.0117647, 1 )
position = Vector2( 0, -1.22215 )
texture = ExtResource( 2 )

[node name="body_armor" type="Sprite" parent="body"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
position = Vector2( -0.0725594, -3.10508 )
scale = Vector2( 1.12, 0.955195 )
texture = ExtResource( 3 )

[node name="head" type="Sprite" parent="body"]
position = Vector2( 0, -20 )
texture = ExtResource( 6 )

[node name="leg_right" type="Sprite" parent="body"]
position = Vector2( 5.89623, 15.3513 )
texture = ExtResource( 7 )

[node name="leg_left" type="Sprite" parent="body"]
position = Vector2( -0.6866, 17.7895 )
texture = ExtResource( 7 )

[node name="mount" type="Sprite" parent="body"]
position = Vector2( 15.2675, 14.46 )
z_as_relative = false

[node name="mount_leg_left" type="Sprite" parent="body/mount"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -8.84302, 5.93475 )
rotation = 0.0520719

[node name="weapon" parent="body" instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.16275, -8.77139 )
shape = SubResource( 1 )
one_way_collision = true

[node name="attack_delay" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "troop_walking"
anims/troop_attacking = SubResource( 2 )
anims/troop_dead = ExtResource( 10 )
anims/troop_dead_2 = ExtResource( 12 )
anims/troop_happy = SubResource( 3 )
anims/troop_running = SubResource( 4 )
anims/troop_walking = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "sfx"

[node name="iddle_delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="holder" type="Sprite" parent="."]
z_index = 1

[node name="health_bar" type="TextureProgress" parent="holder"]
margin_left = -10.2154
margin_top = -58.1718
margin_right = 15.7846
margin_bottom = -54.1718
step = 0.1
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 11 )
fill_mode = 1
tint_under = Color( 0.694118, 0.694118, 0.694118, 1 )
tint_progress = Color( 1, 0.164706, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 8.74071, -2.99231 )
scale = Vector2( 2.89776, 3.78758 )

[connection signal="on_animation_attack_performed" from="body/weapon" to="." method="_on_weapon_on_animation_attack_performed"]
[connection signal="timeout" from="iddle_delay" to="." method="_on_iddle_delay_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
